--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = "==3.13.7"
 dependencies = [
+    "chromadb==1.3.5",
     "grandalf==0.8",
-    "ipywidgets>=8.1.8",
+    "ipywidgets==8.1.8",
     "jupyterlab==4.4.10",
     "langchain==1.0.3",
+    "langchain-chroma==1.0.0",
     "langchain-community==0.4.1",
     "langchain-huggingface==1.1.0",
     "langchain-openai==1.0.2",
     "langgraph==1.0.2",
     "langgraph-checkpoint-sqlite==3.0.0",
+    "langmem>=0.0.30",
     "matplotlib==3.10.7",
+    "pypdf==6.4.0",
     "python-dotenv==1.2.1",
     "pyyaml==6.0.3",
     "scikit-learn==1.7.2",
