--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = "==3.13.7"
 dependencies = [
     "chromadb==1.3.5",
+    "datasets>=4.4.1",
     "grandalf==0.8",
     "ipywidgets==8.1.8",
     "jupyterlab==4.4.10",
@@ -18,9 +19,11 @@ dependencies = [
     "langgraph-checkpoint-sqlite==3.0.0",
     "langmem>=0.0.30",
     "matplotlib==3.10.7",
+    "mlflow>=3.6.0",
     "pypdf==6.4.0",
     "python-dotenv==1.2.1",
     "pyyaml==6.0.3",
+    "ragas>=0.3.9",
     "scikit-learn==1.7.2",
     "scipy==1.16.3",
     "seaborn==0.13.2",
